address horizontal items crossing border (hiding overflow, because in those situations appearance=horizontal-compact would be more appropriate , or no appearance) https://github.com/MartijnR/enketo-grid-theme/issues/83

--- a/src/sass/core/_main.scss
+++ b/src/sass/core/_main.scss
@@ -228,6 +228,7 @@ legend {
         @include flex-direction(row);
     }
     label, .filler {
+        overflow: hidden;
         flex: 1;
         min-width: 30%;
         padding-right: 10px;
